[Amir] resolving the Model conflict in generated ts-client
